feat: user api doc
