# backend/controllers/user.go
@@ -12,17 +12,26 @@ import (
 // @Description list all users
 // @Accept  json
 // @Produce  json
+// @Tags Users
 //
-// @Security ApiKeyAuth
+// @Security JWT
 // @Success 200 "ok"
-// @Router /api/users [post]
+// @Router /api/users [get]
 func GetUsers(c *gin.Context) {
 	var users []models.User
 	models.DB.Preload("Role").Find(&users)
 	c.JSON(http.StatusOK, gin.H{"data": users})
 }
 
-// GetUser handles the GET request to retrieve a single user by ID
+// @Summary Get user
+// @Description Get user by id
+// @Accept  json
+// @Produce  json
+// @Tags Users
+// @Param id path string true "User ID"
+// @Security JWT
+// @Success 200 "ok"
+// @Router /api/user [get]
 func GetUser(c *gin.Context) {
 	id := c.Param("id")
 	var user models.User
@@ -33,41 +42,80 @@ func GetUser(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
-// CreateUser handles the POST request to create a new user
+// @Summary Create user
+// @Description Create new user
+// @Accept  json
+// @Produce  json
+// @Tags Users
+// @Param RegisterDTO	body		models.RegisterDTO	true	"Register new user"
+// @Security JWT
+// @Success 200 "ok"
+// @Router /api/user [post]
 func CreateUser(c *gin.Context) {
-	var user models.User
-	if err := c.ShouldBindJSON(&user); err != nil {
+	var input models.RegisterDTO
+
+	// Bind and validate the input
+	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	// Hash the password before saving
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
+	// Check if the role exists
+	var role models.Role
+	if err := models.DB.First(&role, input.RoleID).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Role not found"})
+		return
+	}
+
+	// Hash the password
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(input.Password), bcrypt.DefaultCost)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to hash password"})
 		return
 	}
-	user.Password = string(hashedPassword)
 
+	// Create the new user object
+	user := models.User{
+		Username: input.Username,
+		Password: string(hashedPassword),
+		RoleID:   input.RoleID,
+		Role:     role,
+	}
+
+	// Save the user to the database
 	if err := models.DB.Create(&user).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create user"})
 		return
 	}
-	c.JSON(http.StatusCreated, user)
+
+	// Return the created user (without the password)
+	c.JSON(http.StatusCreated, gin.H{
+		"id":       user.ID,
+		"username": user.Username,
+		"role":     role.Name,
+	})
 }
 
+// @Summary Update user
+// @Description Update user
+// @Accept  json
+// @Produce  json
+// @Tags Users
+// @Param UpdatedUserDTO	body		models.UpdatedUserDTO	true	"Update user"
+// @Security JWT
+// @Success 200 "ok"
+// @Router /api/user [put]
 // UpdateUser handles the PUT request to update an existing user by ID
 func UpdateUser(c *gin.Context) {
-	id := c.Param("id")
-	var user models.User
-	if err := models.DB.Preload("Role").First(&user, id).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+	var updatedUser models.UpdatedUserDTO
+	if err := c.ShouldBindJSON(&updatedUser); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	var updatedUser models.User
-	if err := c.ShouldBindJSON(&updatedUser); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	var user models.User
+	if err := models.DB.Preload("Role").First(&user, updatedUser.UserID).Error; err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
 		return
 	}
 
@@ -93,6 +141,15 @@ func UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// @Summary Delete user
+// @Description Delete user
+// @Accept  json
+// @Produce  json
+// @Tags Users
+// @Param id path string true "User ID"
+// @Security JWT
+// @Success 200 "ok"
+// @Router /api/user [delete]
 // DeleteUser handles the DELETE request to delete a user by ID
 func DeleteUser(c *gin.Context) {
 	id := c.Param("id")
